--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
       run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
         
     - name: Build the Docker image
-      run: docker build . --file Dockerfile  --platform=linux/arm64 --tag ${{secrets.DOCKER_USER}}/cts-sql:latest
+      run: docker build . --file Dockerfile  --platform=linux/arm64 --tag ${{secrets.DOCKER_USER}}/cts-mysql:latest
       
     - name: Docker Push
-      run: docker push ${{secrets.DOCKER_USER}}/cts-sql:latest
+      run: docker push ${{secrets.DOCKER_USER}}/cts-mysql:latest
